2006-03-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c: (mp3_type_find_at_offset):
	  Fix invalid memory access to region before peek'd data (#332964).

2006-03-09  Wim Taymans  <wim@fluendo.com>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_init):
	* ext/pango/gsttextrender.c: (gst_text_render_init):
	* gst/adder/gstadder.c: (gst_adder_init):
	Don't leak padtemplates, patch by Christophe Fergeau,
	closes #333510.

2006-03-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/subparse/gstsubparse.c: (gst_subparse_type_find):
	  Fix invalid memory access: make sure string passed to
	  regexec() is NUL-termianted.

2006-03-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c: (mp3_type_find_at_offset),
	(mp3_type_find):
	  Refactor mpeg/audio typefinding to make it more maintainable
	  and easier to fine-tune. Make probing into middle of the file
	  work properly (fixes #333900, also see #152688).

2006-03-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c:
	(utf8_type_find_have_valid_utf8_at_offset):
	  Remove part from previous commit that was bogus:
	  g_utf8_validate() does in fact not accept embedded
	  zeroes, so we don't need to check for those (thanks
	  to Mike for the hint).

2006-03-08  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c:
	(utf8_type_find_count_embedded_zeroes),
	(utf8_type_find_have_valid_utf8_at_offset), (utf8_type_find):
	  Make plain/text typefinder more conservative: firstly, check
	  for embedded zeroes, which are perfectly valid UTF-8 characters,
	  but also a fairly good sign that something is not a plain text
	  file; secondly, probe into the middle of the file if possible.
	  If we can't probe into the middle, limit the probability value
	  to be returned to TYPE_FIND_POSSIBLE (see #333900).

2006-03-08  Michael Smith  <msmith@fluendo.com>
